src/snapshots/i3_cycles__protocol__tests__error_multiline.snap
---
source: src/protocol.rs
expression: response
---
{
  "Error": {
    "message": "Multiple errors:\n- Line 1\n- Line 2"
  }
}
