src/snapshots/i3_cycles__protocol__tests__error_special.snap
---
source: src/protocol.rs
expression: response
---
{
  "Error": {
    "message": "Error: workspace 'test' not found!"
  }
}
