src/snapshots/i3_cycles__protocol__tests__error_special_chars.snap
---
source: src/protocol.rs
expression: response
---
{
  "Error": {
    "message": "Error: file 'test.txt' not found! (code: 404)"
  }
}
