src/snapshots/i3_cycles__protocol__tests__error_unicode.snap
---
source: src/protocol.rs
expression: response
---
{
  "Error": {
    "message": "Error: invalid UTF-8 character encountered"
  }
}
