src/snapshots/i3_cycles__protocol__tests__error_wrong_type_null.snap
---
source: src/protocol.rs
expression: result.unwrap_err().to_string()
---
invalid type: null, expected a string at line 1 column 29
