src/snapshots/i3_cycles__protocol__tests__error_wrong_type_number.snap
---
source: src/protocol.rs
expression: result.unwrap_err().to_string()
---
invalid type: integer `123`, expected a string at line 1 column 28
