src/snapshots/i3_cycles__protocol__tests__malformed_empty_object.snap
---
source: src/protocol.rs
expression: result.unwrap_err().to_string()
---
expected value at line 1 column 2
