src/snapshots/i3_cycles__protocol__tests__malformed_trailing_comma.snap
---
source: src/protocol.rs
expression: result.unwrap_err().to_string()
---
trailing comma at line 1 column 30
