src/snapshots/i3_cycles__protocol__tests__malformed_truncated.snap
---
source: src/protocol.rs
expression: result.unwrap_err().to_string()
---
EOF while parsing an object at line 1 column 28
