src/snapshots/i3_cycles__protocol__tests__missing_field_error.snap
---
source: src/protocol.rs
expression: result.unwrap_err().to_string()
---
missing field `message` at line 1 column 12
